# OptionForge

./: AGENTS.md  AGENTS_FOCUS.md  README.md  README_EN.md  pyproject.toml  requirements.txt
.focus/: ACTIVE_SURFACE.md  SYSTEM_MAP.md  TASK_BRIEF.md  TASK_ROUTER.md  TEST_MATRIX.md  WORKFLOWS.md  context.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  docker-smoke.yml
config/subscription/: subscription.toml
deploy/: .env.example  docker-compose.yml
doc/plan/: 2026-03-08-cli-productization-plan.md  2026-03-09-python-interactive-cli-wizard-plan.md
doc/slides/: OptionForge-internal-share.html  option-strategy-scaffold-internal-share.html
docs/architecture/: context-map.md  ddd-constitution.md  refactor-catalog.md
docs/learnt/: 2026-03-24-first-option-strategy-considerations.md
docs/slides/: OptionForge-internal-share.html
docs/workflows/: index.md  lifecycle-workflow.md  market-workflow.md  state-workflow.md  subscription-workflow.md
example/: README.md  __init__.py
example/delta_neutral_example/: README.md  __init__.py  strategy_contract.toml
example/ema_cross_example/: README.md  __init__.py  signal_service.py  strategy_contract.toml
example/iv_rank_example/: README.md  __init__.py  strategy_contract.toml
focus/packs/web/: pack.toml
scripts/: scaffold_strategy.py
src/backtesting/: main.py
src/cli/: app.py  common.py
src/strategy/: strategy_entry.py
tests/: TEST.md
tests/agent-skills/: README.md
tests/cli/: test_app.py
(+135 files in other folders)
